chore: Trigger root-app reconciliation

--- a/root-app.yaml
+++ b/root-app.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
+  annotations:
+    gemini-trigger: "1702293456" # Dummy annotation to trigger reconciliation
 spec:
   project: default
   source:
