--- a/app-of-apps/app-platform-external-secrets.yaml
+++ b/app-of-apps/app-platform-external-secrets.yaml
@@ -15,8 +15,13 @@ spec:
         valueFiles:
           - $values/platform/external-secrets/values.external-secrets.yaml
     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+      targetRevision: main
       ref: values
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: main
+      path: platform/external-secrets
+      directory:
+        include: 'cluster-secret-store.yaml'
 
   destination:
     server: https://kubernetes.default.svc
