--- a/app-of-apps/app-platform-opensearch-dashboards.yaml
+++ b/app-of-apps/app-platform-opensearch-dashboards.yaml
@@ -11,7 +11,7 @@ spec:
   sources:
     # SOURCE 1: Git Repository (The Values Provider)
     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+      targetRevision: main
       ref: values
         
     # SOURCE 2: Helm Chart (The Dashboards Chart)
