--- a/app-of-apps/app-platform-istio-applications.yaml
+++ b/app-of-apps/app-platform-istio-applications.yaml
@@ -18,9 +18,8 @@ spec:
         valueFiles:
           - $values/platform/istio/values.base.yaml
           - $values/platform/istio/values.istiod.yaml
-          - $values/platform/istio/values.gateway.yaml
-    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: main
       ref: values
   
   destination:
@@ -54,7 +53,7 @@ spec:
   project: default
   sources:
     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+      targetRevision: main
       ref: values
     - repoURL: https://istio-release.storage.googleapis.com/charts
       chart: istiod
@@ -92,7 +91,7 @@ spec:
   project: default
   sources:
     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+      targetRevision: main
       ref: values
 
     - repoURL: https://istio-release.storage.googleapis.com/charts
@@ -103,7 +102,7 @@ spec:
           - $values/platform/istio/values.gateway.yaml
 
     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+      targetRevision: main
       path: platform/istio
       directory:
         include: '{certificate.yaml,gateway.yaml,jwt-validation-policy.yaml,alb-ingress.yaml,peer-authentication.yaml}'
