--- a/app-of-apps/app-platform-opensearch-cluster.yaml
+++ b/app-of-apps/app-platform-opensearch-cluster.yaml
@@ -11,8 +11,9 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-    targetRevision: main
+- repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: main
+      ref: values
     path: platform/logging
     directory:
       recurse: false
