--- a/app-of-apps/app-platform-opensearch.yaml
+++ b/app-of-apps/app-platform-opensearch.yaml
@@ -11,7 +11,7 @@ spec:
   project: default
   sources:
     - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-      targetRevision: master
+      targetRevision: main
       ref: values
     - repoURL: https://opensearch-project.github.io/helm-charts/
       targetRevision: 3.3.2
