--- a/app-of-apps/app-platform-sonarqube.yaml
+++ b/app-of-apps/app-platform-sonarqube.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-    targetRevision: master
+    targetRevision: main
     path: platform/sonarqube
   destination:
     server: https://kubernetes.default.svc
