--- a/app-of-apps/apps/hotel-reservation-staging.yaml
+++ b/app-of-apps/apps/hotel-reservation-staging.yaml
@@ -34,6 +34,9 @@ spec:
     repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
     targetRevision: staging
     path: apps/hotel-reservation
+    helm:
+      valueFiles:
+        - values-staging.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: staging
