--- a/app-of-apps/phoenix-production-infrastructure.yaml
+++ b/app-of-apps/phoenix-production-infrastructure.yaml
@@ -9,8 +9,8 @@ spec:
   project: default
   source:
     repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
-    targetRevision: master
-    path: environments/production/infra
+    targetRevision: main
+    path: environments/production
   destination:
     server: https://kubernetes.default.svc
     namespace: phoenix-prod
