--- a/apps/hotel-reservation/values-production.yaml
+++ b/apps/hotel-reservation/values-production.yaml
@@ -24,6 +24,11 @@ global:
     runAsGroup: 101
     runAsNonRoot: true
 
+  mongodb:
+    enabled: true
+    uri: "mongodb://<USER_PROD>:<PASSWORD_PROD>@<HOST_PROD>:<PORT_PROD>/<DATABASE_PROD>?replicaSet=<REPLICA_SET_NAME_PROD>"
+    secretName: "external-mongodb-credentials-production" # Secret to store URI, user, password for production
+
 # Sub-chart overrides for production
 frontend:
   enabled: true
