--- a/apps/hotel-reservation/values.yaml
+++ b/apps/hotel-reservation/values.yaml
@@ -23,6 +23,11 @@ global:
     runAsGroup: 101
     runAsNonRoot: true
 
+  mongodb:
+    enabled: true
+    uri: "mongodb://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE>?replicaSet=<REPLICA_SET_NAME>"
+    secretName: "external-mongodb-credentials" # Secret to store URI, user, password
+
 # Sub-chart overrides
 frontend:
   enabled: true
