--- a/platform/registry/harbor-values.yaml
+++ b/platform/registry/harbor-values.yaml
@@ -1,23 +1,7 @@
 # platform/registry/harbor-values.yaml
-expose:
-  type: ingress
-  tls:
-    certSource: none
-  ingress:
-    hosts:
-      core: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com
-    controller: default
-    className: alb
-    annotations:
-      alb.ingress.kubernetes.io/scheme: internet-facing
-      alb.ingress.kubernetes.io/target-type: instance
-      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-
 portal:
   service:
-    type: NodePort
-
-externalURL: http://k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com
+    type: ClusterIP
 
 harborAdminPassword: "Harbor@12345"
 secretKey: "HarborSecretKey1"
@@ -30,7 +14,7 @@ core:
   secret: "HarborCoreSecret123456"
   xsrfKey: "HarborXsrfKey12345678901234567890"
   service:
-    type: NodePort
+    type: ClusterIP
 
 jobservice:
   secret: "HarborJobSecret1"
